...
      onSwipeComplete={props.onDismiss}
      swipeDirection="down"
      onBackdropPress={props.onDismiss}>
      <View style={styles.container} testID="flatlist_modal_view">
        <FlatList
          ref={scrollRef}
          testID="flatlist_view"
          scrollEventThrottle={16}
          contentOffset={contentOffset}
          onContentSizeChange={(w, h) => setContentSize(h)}
          onLayout={e => setScrollViewHeight(e.nativeEvent.layout.height)}
          onScroll={(e: any) => {
            setContentOffset(e.nativeEvent.contentOffset);
...
          data={Array.from({ length: 50 }, (value, key) => ({
            key: String(key),
          }))}
          style={styles.scrollView}
        />

        <Text testID="flatlist_fixed_text">random non scroll item</Text>
      </View>
    </Modal>
  );
};

const styles = StyleSheet.create({
...
